--- a/ConanApp/app/src/main/res/values/strings.xml
+++ b/ConanApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Conan Mbot</string>
+
+    <string name="navigation_home">Home</string>
+    <string name="navigation_steer">Steer</string>
+    <string name="navigation_map">Map</string>
+
 </resources>
